# CollaborativeWhiteboardPython

./: README.md  app.py  index.html  pyproject.toml
static/stylesheets/: styles.css
templates/: index.html  style.css
